{
  "version": 4,
  "terraform_version": "1.0.8",
  "serial": 49,
  "lineage": "11f9310e-2515-1c82-4fd0-fff2cb1eebe9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "my_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-05713b7b29b9c3290",
            "domain": "vpc",
            "id": "eipalloc-0910b2e1564f8e1cb",
            "instance": "i-06955e07f79282bd7",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0bfb643b61f259c97",
            "private_dns": "ip-10-0-1-53.ap-northeast-2.compute.internal",
            "private_ip": "10.0.1.53",
            "public_dns": "ec2-3-37-173-20.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.37.173.20",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.my_instance",
            "aws_key_pair.my_sshkey",
            "aws_security_group.my_sg_web",
            "data.aws_ami.amazon_linux",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03787d1dcbb31f926",
            "arn": "arn:aws:ec2:ap-northeast-2:552663305295:instance/i-06955e07f79282bd7",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06955e07f79282bd7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "my_sshkey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0bfb643b61f259c97",
            "private_dns": "ip-10-0-1-53.ap-northeast-2.compute.internal",
            "private_ip": "10.0.1.53",
            "public_ip": "13.124.96.86",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0717c5931b6ce9ed0",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-070cc461031bbef22",
            "tags": {
              "Owner": "Community Team",
              "Service": "forum"
            },
            "tags_all": {
              "Owner": "Community Team",
              "Service": "forum"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0710fd00d7be1f258"
            ]
          },
          "dependencies": [
            "aws_key_pair.my_sshkey",
            "aws_security_group.my_sg_web",
            "data.aws_ami.amazon_linux",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_sg_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:552663305295:security-group/sg-0710fd00d7be1f258",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0710fd00d7be1f258",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow-web",
            "name_prefix": "",
            "owner_id": "552663305295",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04f1415aeec393681"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:552663305295:internet-gateway/igw-0612aaa0b87360259",
            "id": "igw-0612aaa0b87360259",
            "owner_id": "552663305295",
            "tags": {
              "Name": "my-vpc",
              "Owner": "Community Team",
              "Service": "forum"
            },
            "tags_all": {
              "Name": "my-vpc",
              "Owner": "Community Team",
              "Service": "forum"
            },
            "vpc_id": "vpc-04f1415aeec393681"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0612aaa0b87360259",
            "id": "r-rtb-056e05b6a21aecfc81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-056e05b6a21aecfc8",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_internet_gateway.this",
            "module.my_vpc.aws_route_table.public",
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:552663305295:route-table/rtb-0d3b13cc713e6eb1f",
            "id": "rtb-0d3b13cc713e6eb1f",
            "owner_id": "552663305295",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "my-vpc-private-ap-northeast-2a",
              "Owner": "Community Team",
              "Service": "forum"
            },
            "tags_all": {
              "Name": "my-vpc-private-ap-northeast-2a",
              "Owner": "Community Team",
              "Service": "forum"
            },
            "timeouts": null,
            "vpc_id": "vpc-04f1415aeec393681"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:552663305295:route-table/rtb-07c243411bd368cfa",
            "id": "rtb-07c243411bd368cfa",
            "owner_id": "552663305295",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "my-vpc-private-ap-northeast-2c",
              "Owner": "Community Team",
              "Service": "forum"
            },
            "tags_all": {
              "Name": "my-vpc-private-ap-northeast-2c",
              "Owner": "Community Team",
              "Service": "forum"
            },
            "timeouts": null,
            "vpc_id": "vpc-04f1415aeec393681"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:552663305295:route-table/rtb-056e05b6a21aecfc8",
            "id": "rtb-056e05b6a21aecfc8",
            "owner_id": "552663305295",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "my-vpc-public",
              "Owner": "Community Team",
              "Service": "forum"
            },
            "tags_all": {
              "Name": "my-vpc-public",
              "Owner": "Community Team",
              "Service": "forum"
            },
            "timeouts": null,
            "vpc_id": "vpc-04f1415aeec393681"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0123a125d71f40a8e",
            "route_table_id": "rtb-0d3b13cc713e6eb1f",
            "subnet_id": "subnet-06e10dd55adff40f5"
          },
          "dependencies": [
            "module.my_vpc.aws_route_table.private",
            "module.my_vpc.aws_subnet.private",
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0943a4034700482fd",
            "route_table_id": "rtb-07c243411bd368cfa",
            "subnet_id": "subnet-067655c8eb2725087"
          },
          "dependencies": [
            "module.my_vpc.aws_route_table.private",
            "module.my_vpc.aws_subnet.private",
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-038c1b8b8d35f2164",
            "route_table_id": "rtb-056e05b6a21aecfc8",
            "subnet_id": "subnet-070cc461031bbef22"
          },
          "dependencies": [
            "module.my_vpc.aws_route_table.public",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02d96d6da1322177e",
            "route_table_id": "rtb-056e05b6a21aecfc8",
            "subnet_id": "subnet-0009bd68cc50c8825"
          },
          "dependencies": [
            "module.my_vpc.aws_route_table.public",
            "module.my_vpc.aws_subnet.public",
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:552663305295:subnet/subnet-06e10dd55adff40f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-06e10dd55adff40f5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "552663305295",
            "tags": {
              "Name": "my-vpc-private-ap-northeast-2a",
              "Owner": "Community Team",
              "Service": "forum"
            },
            "tags_all": {
              "Name": "my-vpc-private-ap-northeast-2a",
              "Owner": "Community Team",
              "Service": "forum"
            },
            "vpc_id": "vpc-04f1415aeec393681"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:552663305295:subnet/subnet-067655c8eb2725087",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-067655c8eb2725087",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "552663305295",
            "tags": {
              "Name": "my-vpc-private-ap-northeast-2c",
              "Owner": "Community Team",
              "Service": "forum"
            },
            "tags_all": {
              "Name": "my-vpc-private-ap-northeast-2c",
              "Owner": "Community Team",
              "Service": "forum"
            },
            "vpc_id": "vpc-04f1415aeec393681"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:552663305295:subnet/subnet-070cc461031bbef22",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-070cc461031bbef22",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "552663305295",
            "tags": {
              "Name": "my-vpc-public-ap-northeast-2a",
              "Owner": "Community Team",
              "Service": "forum"
            },
            "tags_all": {
              "Name": "my-vpc-public-ap-northeast-2a",
              "Owner": "Community Team",
              "Service": "forum"
            },
            "vpc_id": "vpc-04f1415aeec393681"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:552663305295:subnet/subnet-0009bd68cc50c8825",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0009bd68cc50c8825",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "552663305295",
            "tags": {
              "Name": "my-vpc-public-ap-northeast-2c",
              "Owner": "Community Team",
              "Service": "forum"
            },
            "tags_all": {
              "Name": "my-vpc-public-ap-northeast-2c",
              "Owner": "Community Team",
              "Service": "forum"
            },
            "vpc_id": "vpc-04f1415aeec393681"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.this",
            "module.my_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:552663305295:vpc/vpc-04f1415aeec393681",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0552f96ed411f9057",
            "default_route_table_id": "rtb-0b8827d50166a530a",
            "default_security_group_id": "sg-00e40d8bc57657882",
            "dhcp_options_id": "dopt-0f983ca3ce6311be6",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-04f1415aeec393681",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b8827d50166a530a",
            "owner_id": "552663305295",
            "tags": {
              "Name": "my-vpc",
              "Owner": "Community Team",
              "Service": "forum"
            },
            "tags_all": {
              "Name": "my-vpc",
              "Owner": "Community Team",
              "Service": "forum"
            }
          }
        }
      ]
    }
  ]
}